--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,2 +1,23 @@
 {% extends "base.html" %} 
 {% block title %}Home{% endblock %}
+{% block content %}
+
+<h1 align="center">Blog</h1>
+
+<ul class="list-group list-group-flush" id="blogs">
+{% for blog in user.blogs %}
+<li class="list-group-item">{{ blog.content }}</li>
+{% endfor %}
+</ul>
+
+<form method='POST'>
+
+<br>
+<textarea name="blog" id="blog" class="form-control"></textarea>
+<div align="center">
+<br>
+<button type="submit" class="btn btn-primary">Add Blog</button>
+</div>
+
+</form>
+{% endblock %}
